<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General Settings">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/data_saver_key"
            android:summary="@string/data_saver_summary"
            android:title="Data Saver" />
        <ListPreference
            android:defaultValue="10"
            android:dialogTitle="@string/setting_rank_number_title"
            android:entries="@array/rank_number"
            android:entryValues="@array/rank_number"
            android:key="@string/rank_number_key"
            android:summary="@string/rank_number_summary"
            android:title="@string/setting_rank_number_title" />
        <ListPreference
            android:defaultValue="15"
            android:dialogTitle="@string/setting_text_size_title"
            android:entries="@array/text_size"
            android:entryValues="@array/text_size_value"
            android:key="@string/text_size_key"
            android:summary="@string/text_size_summary"
            android:title="@string/setting_text_size_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Download Settings">
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/download_address_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="Set your own remote aria2 address."
            android:title="@string/remote_address" />

        <EditTextPreference
            android:defaultValue=""
            android:key="@string/download_secret"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="Set your own remote aria2 secret."
            android:title="@string/aria2_secret" />
    </PreferenceCategory>
    <PreferenceCategory android:title="About">
        <Preference
            android:key="@string/help_key"
            android:title="@string/help_title" />
        <Preference
            android:key="@string/version_info"
            android:title="@string/info_title" />
    </PreferenceCategory>
</PreferenceScreen>